@@ -4,9 +4,9 @@ DESCRIPTION=TCP Load Balancing Port Forwarder
 EAPI=4
 HOMEPAGE=http://siag.nu/pen/
 IUSE=geoip ssl
-KEYWORDS=~amd64 ~ppc ~x86
+KEYWORDS=~amd64 ~ppc x86
 LICENSE=GPL-2+
 RDEPEND=geoip? ( dev-libs/geoip ) ssl? ( dev-libs/openssl )
 SLOT=0
 SRC_URI=http://siag.nu/pub/pen/pen-0.25.1.tar.gz
-_md5_=c1a22b0f2c254fb486f332a247b19b58
+_md5_=3f94b4e6c403aa135ae1a940cc18dd62
