@@ -4,24 +4,23 @@ Hash: SHA256
 DIST pen-0.20.1.tar.gz 160325 SHA256 eb5060589ee34f55b54d6bf203b10094fddb1d15f14581a59e4520367f9dc8fc SHA512 7626d2677cbfea2ec18de194e02d6781d70fc3db1047cf130b576b4d3b2d379d3173851d3c33434b3ac6669810c3322ba47b36cdbabcafc40ae9b31f5406b999 WHIRLPOOL 1be990a377ff0e8aa0bc1bcf23c85634337a7e31268df707148493dc8305e8d762ff6d9741148a04fb0a0962ea836e7f2052629b271edf6f59f24b1c33b97009
 DIST pen-0.25.1.tar.gz 150231 SHA256 2dd9ca3b2f8057b9e59ddf07000a34649835ad23b45e6d34e8b9422d3dcb5270 SHA512 712c5899eb0ab20df1c91653328a63fe1715f0412e434aa08229555ff725bd54eb4732be1176f2cea02761db37a5ae241a4f790ca803fc1002be2bf65bc6269b WHIRLPOOL 22fb7c8c88415e303158e6a3fe203dd9a664be13f9cf8bdafe20502c07e2f06205d12000ed4b65a3fbaf4ee61d0a015b0e4d1b72a592b66814fb8114932f78bd
 EBUILD pen-0.20.1.ebuild 585 SHA256 c88429648f10086c720a7534fb1922aa2e6fa340891fbe3997fb2ddbd2712644 SHA512 be9592944ccd9a7225200a960329a73f180d6f94904bfd709f43d2a836fb978fdb7f2175e5e5ac0d7c684e75fbb43872e31ff5005f66faad8bc9160cf2ac93af WHIRLPOOL cbd0d6b6f39522eabe719db2b0e2eca1e339c40fddc259cd2f77b3ce2f491af1cc7416fc6004216e6b71a9ac52ad345b2df37aae074c99f71a5efb3899148f0f
-EBUILD pen-0.25.1.ebuild 613 SHA256 1a12c971e963bb8df36de823d4feba16ea1525ff533e07974fb40bad08580397 SHA512 ebc29e26768b9aae818ca10cdab09fdf156f49995bc28dffd169ba1e27523014c6bf62c875922dab5b8d28bc7ca1e42214be6daa1cadb64acdaf1846603274aa WHIRLPOOL 79944fa63305dc7c1fe60158d929fe28eda11880c9eb2f442888ab8629ff5870ec6db9abd7a8b99ce52e1d0785135414948d3928fad10c2cdab98425e0c63c15
-MISC ChangeLog 2563 SHA256 4cb8650d068c43e329625c5d4537f2275e95592eb7cd54d51c664abe91e055b0 SHA512 d35f863ad95489aeb711158c2e2114fb27c29acf48ea641a31d3faca18f19f19db484731fbb708baa6364787e530d36984012c0ccd62b08daa29fe573378d9d1 WHIRLPOOL ac0229a4c25ca05f44a6cf703d6c9153ee44c739848a26be4be32df1edc8024c605b7aca6913e37f6869e7f25afca3cfed6a98f4e73da52f982f7f8ed4e7b198
+EBUILD pen-0.25.1.ebuild 611 SHA256 861c3f16ba63724db5563bea205c35787e9934a985da57586acaaf220cd395d6 SHA512 3ef5cd13455513f552dae61858ffe6c200babc8f1a11aa03888b818eb1edfef07126239070cf623a491ec9d9502dc60fa5af84452e50922d58f4682f36e71499 WHIRLPOOL 1472123be9d88d7615e8f5c300e952fdc55f18ec193b31357ab7f5964410a65b64768df006d251ec8f0ffa783d2a4a397b5cb13b411003998600107d9bc2e2e6
+MISC ChangeLog 2666 SHA256 f43614cf4aa28f7c7a73b72559f126e49930c82d89d93053bb7c6f0552a811cb SHA512 a393df3c814a12ad819d093c39ac255b0e43022060955aeeaefbadc0e601bb63531ba4a5c51a327b04b27ebf4f16b6576cef4e89f7d77af43616822ca29fcb99 WHIRLPOOL 883136a8613516ebe77f935d6e94c1dc8e656870d4807ea9fe76223e9c9aceb453a81ee9bb0415f0c803e69a8a28310016ef9759b9af1cc096fda752e5d43d5a
 MISC metadata.xml 214 SHA256 0e019c1dee563e5b23815be471ae1b65fcaf721a91ec48037446d41ca787d3e5 SHA512 701b8c51f43f8660d40700929c243a2dae9f19dcbc7b8eca877e20eadc1ae2e0c84f7c7d8c3cb576055c1a49a55e9c759ef469eeda67026ce252d341937f6691 WHIRLPOOL 977119e736e0795137df14faae681f7fa07ba8297a19ef4a7d7b93de7efceaed16f7103f179a762be41b8849c33c535b55d16d2fd0ea795df0525592752e0156
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJiBAEBCABMBQJUPpuyRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
-MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
-7KJrD/4j6C0yRj6zqolXC4eoOs8VkuIYkUEcqKwEc8wU+61a+1btuZ/l/V6sNMd3
-QGxbLevc4yWBD3mKDSbSSJBQ4suXQoNr3auwvthOe1qgJDPTGz6torH/daIk8M+h
-dLRlkYz48SwFhDHlZ2oVecgSGlr8oIySzYn2wEDyByMLH7xnOxCAIKeIybBsKMLw
-rTSSI3whp+oQw1oYGt4cdneDxibavyfHJQm0T34GjTID6MWhMXH61Vo/ftEm2Yry
-Q2zFOEaG9hLDYBjq2kAckJAhwZ5xOwN65x4vvfxOxdZroRj/LNfAcu/yB5jq3Plv
-jPGT4FHpoTXVvNDTT0Y6vhu0qlQi5itMNaD0x9RASQrRgv1tdaphMvlhOJTBfsvR
-CHgn0UN7EKHJR8uQH1eWO1S9BrPcCTQ3eVB+3bGCoW0K4jlFK7lmCY14NQxjorGy
-j+K2YL9BqcOQJ24SBvODqRuBV47MvR+vUeKOV4PWgnlWi4AtsXTWiygZLgUpuQK1
-a4tkwwHdPvjfJGvgFhzGukFiyQfhU7YmTSQULAWlPn80a9yeWEXFhmnFoMEBDRbz
-u8RGh1WwGb6yVNu4Hyfb3nbqbzc3GBVR/FZQEJN2yvWLYx9rJ/WvdB8JnKHS2tk6
-4rHuRBOz2rbFUxQGYDIZ1I9lrKYL+q2vhixOuAJdZx0bURe7RA==
-=POcF
+iQIcBAEBCAAGBQJVHEx1AAoJEIug43o+kWudNuYQAKhqXCTutZDt0IhhfibVjBmx
+YDOMTSTpPWEjeEoDwP8Kkpe+iMGupnHlPcFQj4vmIFA65OigIHBd/pt8GhxbdIuF
+iVw65BJ1qPNgr7+V5X0K+zKB6vZfk2klfZdq4R+belgjsZMuRXEv+ZGIc99TTx9q
+TCHuuo5LiJONIQZQpYdsC7cRGaFr1F4VBH6aBSi8ZhI94is4fvGeWHfhE0FoTwt3
+tCaPURco5tGtgac0nAyFFqEX0BqJgnMJ3S2/eunBqAE0NA+E6SXhkwf/CjQz2L1e
+sSlgoL7o4U1B+pksynBCAJTzv9yaetWM+1nmU/XADt83BDVEabxNtlWo1ZHiCZ/J
+P+jdXd568Z0CM7HsKIweprHS9pkYnti5WueJn95WxcdZNP3vC6VdwbdomM1A+F1l
+CiOONJNjPpOM0V7OZrDH4qt8J1+ZxCPyvEkss+n7Xrr2ESj1L2WGhCeATbYJoYox
+0QhVoPX/6KYCVs3bauYxFOl3HUbrapjfixQfA4GmhrQkTy2ak03/sDp25Clsjzr0
+GfgKQefp7bwKnV+XCkg1gsIjeIbQ+cyN9GGUeO0oCdywNYcYsFk31zMu/nNqKDrQ
+yWrq7tYhe061fMLn95cygf0hTcvExG2yFcWHRgfgOfOq6D/edXxApuP8tFbbuJpP
+2ujj0frOsi2CHbcPIupO
+=so/7
 -----END PGP SIGNATURE-----
