@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/pen/pen-0.25.1.ebuild,v 1.1 2014/10/15 16:07:07 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/pen/pen-0.25.1.ebuild,v 1.2 2015/04/01 19:52:14 nativemad Exp $
 
 EAPI="4"
 
@@ -10,7 +10,7 @@ SRC_URI="http://siag.nu/pub/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2+"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ppc x86"
 IUSE="geoip ssl"
 
 DEPEND="geoip? ( dev-libs/geoip )
